--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,16 @@ pip-selfcheck.json
 /test
 /__pycache__
 /*/__pycache__
+resources/__pycache__/user_story.cpython-311.pyc
+resources/__pycache__/user.cpython-311.pyc
+resources/__pycache__/item_type.cpython-311.pyc
+resources/__pycache__/item.cpython-311.pyc
+resources/__pycache__/classification.cpython-311.pyc
+models/__pycache__/user_story.cpython-311.pyc
+models/__pycache__/item_type.cpython-311.pyc
+models/__pycache__/item.cpython-311.pyc
+helpers/__pycache__/storages.cpython-311.pyc
+helpers/__pycache__/Openai.cpython-311.pyc
+helpers/__pycache__/assistant.cpython-311.pyc
+helpers/__pycache__/__init__.cpython-311.pyc
+__pycache__/app.cpython-311.pyc
