--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ resources/__pycache__/item.cpython-311.pyc
 resources/__pycache__/item_type.cpython-311.pyc
 resources/__pycache__/user.cpython-311.pyc
 resources/__pycache__/user_story.cpython-311.pyc
+resources/__pycache__/item_type.cpython-311.pyc
