--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,5 @@ resources/__pycache__/user_story.cpython-311.pyc
 resources/__pycache__/item_type.cpython-311.pyc
 /private/assistants.json
 private\assistants.json
+/private/thread_id.json
+private\thread_id.json
